--- a/Website/index.html
+++ b/Website/index.html
@@ -4,24 +4,27 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SQUIP site</title>
+    <title>SQUIP.com</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/bottom.css">
     <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="css/picture.css">
     <link rel="stylesheet" href="css/bottom_2.css">
+    <link rel="stylesheet" href="css/sub.css">
+    <link rel="stylesheet" href="css/stat.css">
   </head>
   <body>
 
     <!-- Nav Begin -->
     <div class="mobile-nav-bar title-bar">
       <div class="title-bar-left">
-        <button class="menu-icon" type="button"></button>
+        <a class="menu-icon" type="button" href="info/index.html"></a>
       </div>
       <div class="title-bar-center">
-        <span class="title-bar-text">My Page</span>
+        <span class="title-bar-text">SQUIP.com</span>
       </div>
       <div class="title-bar-right">
         <span class="title-bar-text">Actions</span>
@@ -29,166 +32,47 @@
       </div>
     </div>
     <!-- Nav End -->
+<p></p>
 
+<!-- Stat Begin -->
+<ul class="stats-list">
+  <li>
+    7.442 billion <span class="stats-list-label">Humans</span>
+  </li>
+  <li class="stats-list-positive">
+    17,678 <span class="stats-list-label">SQUIPs Online</span>
+  </li>
+  <li class="stats-list-negative">
+    2,390 <span class="stats-list-label">Deleted SQUIPs</span>
+  </li>
+</ul>
+<!-- Stat End -->
 
-    <!-- Header Begin -->
-    <div class="button-group align-center">
-      <button href="#" class="button" data-open="mobile-ios-modal"><i class="fa fa-cogs"></i> Quantity</button>
-      <button href="#" class="button" data-open="mobile-ios-modal-2"><i class="fa fa-warning"></i> Alert</button>
-      <button href="#" class="button" data-open="mobile-ios-modal-3"><i class="fa fa-cogs"></i> Security</button>
-      <button href="#" class="button" data-open="mobile-ios-modal-4"><i class="fa fa-cogs"></i> Settings</button>
-    </div>
-
-    <div class="reveal mobile-ios-modal" id="mobile-ios-modal" data-reveal>
-      <div class="mobile-ios-modal-inner">
-        <p>Number of SQUIPS</p>
-        <input type="number">
-      </div>
-
-      <div class="mobile-ios-modal-options">
-        <button data-close class="button">Cancel</button>
-        <button class="button">Ok</button>
-      </div>
-    </div>
-
-    <div class="reveal mobile-ios-modal" id="mobile-ios-modal-2" data-reveal>
-      <div class="mobile-ios-modal-inner">
-        <p>You are not good enough to access this app. Fuck off.</p>
-      </div>
-
-      <div class="mobile-ios-modal-options">
-        <button data-close class="button">Cancel</button>
-        <button data-close class="button">Ok</button>
-      </div>
-    </div>
-
-    <div class="reveal mobile-ios-modal" id="mobile-ios-modal-3" data-reveal>
-      <div class="mobile-ios-modal-inner">
-        <p>Plase enter your 5-digit passcode</p>
-        <input type="text">
-      </div>
-
-      <div class="mobile-ios-modal-options">
-        <button data-close class="button">Cancel</button>
-        <button data-close class="button">Ok</button>
-      </div>
-    </div>
-
-    <div class="reveal mobile-ios-modal" id="mobile-ios-modal-4" data-reveal>
-
-      <div class="mobile-ios-modal-options-stacked">
-        <button data-close class="button">Search for Bastard</button>
-        <button data-close class="button">Choose Bastard</button>
-        <button data-close class="button">Delete Bastard</button>
-        <button data-close class="button">Cancel</button>
-      </div>
-    </div>
-    <!-- Header End -->
-
-
-    <!-- Content Begin -->
+    <!-- Content 1 Begin -->
     <div class="mobile-app-dashboard-header">
       <h1>Meet the Bastards!</h1>
     </div>
+    <!-- Content 1 End -->
 
-    <div class="mobile-app-dashboard">
-      <a href="">
-        <div class="mobile-app-dashboard-inner">
-          <i class="fa fa-plane" aria-hidden="true"></i>
-          <span>Neo</span>
-        </div>
-      </a>
-
-      <a href="">
-        <div class="mobile-app-dashboard-inner">
-          <i class="fa fa-clock-o mobile-app-dashboard-icon" aria-hidden="true"></i>
-          <span>Chase</span>
-        </div>
-      </a>
-
-      <a href="">
-        <div class="mobile-app-dashboard-inner">
-          <i class="fa fa-check-square-o" aria-hidden="true"></i>
-          <span>Alex</span>
-        </div>
-      </a>
-
-      <a href="">
-        <div class="mobile-app-dashboard-inner">
-          <i class="fa fa-cutlery" aria-hidden="true"></i>
-          <span>Blaine</span>
-        </div>
-      </a>
-
-      <a href="">
-        <div class="mobile-app-dashboard-inner">
-          <i class="fa fa-question" aria-hidden="true"></i>
-          <span>Ina</span>
-        </div>
-      </a>
-
-      <a href="">
-        <div class="mobile-app-dashboard-inner">
-          <i class="fa fa-plus" aria-hidden="true"></i>
-          <span>Chad</span>
-        </div>
-      </a>
-
-    </div>
-    <!-- Content End -->
-
-    <!-- Bottom Begin -->
-    <div class="mobile-app-icon-bar">
-      <button><i class="fa fa-picture-o" aria-hidden="true"></i></button>
-      <button><i class="fa fa-map-marker" aria-hidden="true"></i></button>
-      <button><i class="fa fa-upload" aria-hidden="true"></i></button>
-      <button><i class="fa fa-list-ul" aria-hidden="true"></i></button>
-      <button><i class="fa fa-cog" aria-hidden="true"></i></button>
-    </div>
-    <!-- Bottom End -->
-
-    <!-- Bottom 2 Begin -->
-    <div class="off-canvas mobile-action-sheet off-canvas-absolute position-bottom" id="payments-action-sheet" data-off-canvas>
-      <div class="mobile-action-sheet-inner">
-
-        <button href="#" class="button action-sheet-toggle" type="button" data-toggle>Open Action Sheet</button>
-
-        <button class="close-button" aria-label="Close menu" type="button" data-close>
-          <span aria-hidden="true">&times;</span>
-        </button>
-
-        <p>This action sheet can contain all sorts of things</p>
-        <h5>Content</h5>
-        <p>
-          Check Check it
-        </p>
-        <h5>Forms</h5>
-        <form>
-          <label>Fill me out
-            <input type="text"></input>
-          </label>
-        </form>
-
-        <h5>Buttons</h5>
-        <button href="#" class="button hollow white">Push the button</button>
-
-      </div>
-    </div>
-    <!-- Bottom 2 End -->
+<p></p>
 
     <!-- Footer Begin -->
     <div class="mobile-bottom-bar">
       <a href="#" class="footer-link">
-        <i class="fa fa-cog"></i> <span class='footer-text'>Settings</span>
+        <i class="fa fa-cog"></i> <span class='footer-text'>Home</span>
       </a>
-      <a href="#" class="footer-link">
+      <a href="info/index.html" class="footer-link">
         <i class="fa fa-sign-out"></i> <span class='footer-text'>Log out</span>
       </a>
     </div>
     <!-- Footer End -->
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/info.js"></script>
+    <script src="js/stat_1.js"></script>
+    <script src="js/content_2.js"></script>
   </body>
 </html>
