--- a/Website/index.html
+++ b/Website/index.html
@@ -62,7 +62,7 @@
         <i class="fa fa-cog"></i> <span class='footer-text'>Home</span>
       </a>
       <a href="info/index.html" class="footer-link">
-        <i class="fa fa-sign-out"></i> <span class='footer-text'>Log out</span>
+        <i class="fa fa-sign-out"></i> <span class='footer-text'>Log in</span>
       </a>
     </div>
     <!-- Footer End -->
