--- a/Website/main/index.html
+++ b/Website/main/index.html
@@ -21,7 +21,7 @@
     <!-- Nav Begin -->
     <div class="mobile-nav-bar title-bar">
       <div class="title-bar-left">
-        <a class="menu-icon" type="button" href="info/index.html"></a>
+        <a class="menu-icon" type="button" href="../info/index.html"></a>
       </div>
       <div class="title-bar-center">
         <span class="title-bar-text">SQUIP.com</span>
@@ -169,7 +169,7 @@
       <a href="#" class="footer-link">
         <i class="fa fa-cog"></i> <span class='footer-text'>Home</span>
       </a>
-      <a href="info/index.html" class="footer-link">
+      <a href="../index.html" class="footer-link">
         <i class="fa fa-sign-out"></i> <span class='footer-text'>Log out</span>
       </a>
     </div>
