--- a/Website/info/index.html
+++ b/Website/info/index.html
@@ -48,7 +48,7 @@
     <div class="simple-subscription-form">
       <form>
         <h4>Subscribe</h4>
-        <p>Completely give yourself to these SQUIPs and more. In fact, sign up to get one of your own! :</p>
+        <p>Completely give yourself to these SQUIPs and more. In fact, sign up to get one of your own!:</p>
         <div class="input-group">
           <span class="input-group-label">
             <i class="fa fa-envelope"></i>
@@ -64,17 +64,14 @@
       <a href="../index.html" class="footer-link">
         <i class="fa fa-cog"></i> <span class='footer-text'>Home</span>
       </a>
-      <a href="#" class="footer-link">
-        <i class="fa fa-sign-out"></i> <span class='footer-text'>Log out</span>
-      </a>
     </div>
     <!-- Footer End -->
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/info.js"></script>
-    <script src="js/stat_1.js"></script>
-    <script src="js/content_2.js"></script>
+    <script src="../js/vendor/jquery.js"></script>
+    <script src="../js/vendor/what-input.js"></script>
+    <script src="../js/vendor/foundation.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/info.js"></script>
+    <script src="../js/stat_1.js"></script>
+    <script src="../js/content_2.js"></script>
   </body>
 </html>
