--- a/Website/main/index.html
+++ b/Website/main/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../css/bottom_2.css">
     <link rel="stylesheet" href="../css/sub.css">
     <link rel="stylesheet" href="../css/stat.css">
+    <link rel="stylesheet" href="../css/menu.css">
   </head>
   <body>
 
@@ -25,10 +26,6 @@
       </div>
       <div class="title-bar-center">
         <span class="title-bar-text">SQUIP.com</span>
-      </div>
-      <div class="title-bar-right">
-        <span class="title-bar-text">Actions</span>
-        <span class="title-bar-text"><a href="#"><i class="fa fa-home title-bar-logo"></i></a></span>
       </div>
     </div>
     <!-- Nav End -->
@@ -56,111 +53,15 @@
 
 <p></p>
 
-    <!-- Content 2 Begin -->
-    <div class="callout">
-  <h4><strong>Neo</strong></h4>
-  <p>Meet the main asshole, the one that started this all.</p>
-
-  <button data-toggle="read-more-content" href="#">SHOW MORE <i class="fa fa-plus"></i></button>
-  <div class="read-more-content" id="read-more-content" data-toggler data-animate="hinge-in-from-top slide-out-left">
-    <h5>Info about this Bastard:</h5>
-    <ul>
-      <li>Jeremy's SQUIP</li>
-      <li>Looks like Keanu Reeves from the Matrix</li>
-      <li>Left nipple always hard</li>
-      <li>Gay for Chase</li>
-      <li>Also fucks Erratus occasionally</li>
-      <li>Has evil daughter (Ina) and blessed son (Blaine)</li>
-      <li>Hates Alex with a passion</li>
-    </ul>
-  </div>
-</div>
-
-<div class="callout">
-  <h4><strong>Chase</strong></h4>
-  <p>Choose from the following classes to change the animation:</p>
-  <button data-toggle="read-more" href="#">SHOW MORE <i class="fa fa-plus"></i></button>
-  <div class="read-more" id="read-more" data-toggler data-animate="hinge-in-from-top slide-out-left">
-    <h5>Info about this Bastard:</h5>
-    <ul>
-      <li>Jeremy's SQUIP</li>
-      <li>Looks like Keanu Reeves from the Matrix</li>
-      <li>Left nipple always hard</li>
-      <li>Gay for Chase</li>
-      <li>Also fucks Erratus occasionally</li>
-      <li>Has evil daughter (Ina) and blessed son (Blaine)</li>
-      <li>Hates Alex with a passion</li>
-    </ul>
-  </div>
-</div>
-    <!-- Content 2 End -->
-
-    <!-- Picture Begin -->
-    <section class="filter-simple">
-      <div class="button-group round">
-        <button class="button hollow filter-simple-button is-active" data-filter="all">All</button>
-        <button class="button hollow filter-simple-button" data-filter="neo">Neo</button>
-        <button class="button hollow filter-simple-button" data-filter="chase">Chase</button>
-        <button class="button hollow filter-simple-button" data-filter="alex">Alex</button>
-        <button class="button hollow filter-simple-button" data-filter="blaine">Blaine</button>
-        <button class="button hollow filter-simple-button" data-filter="ina">Ina</button>
-        <button class="button hollow filter-simple-button" data-filter="erratus">Erratus</button>
-      </div>
-
-      <div class="row small-up-2 medium-up-3 large-up-4">
-        <div class="column column-block filter-simple-item chase">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/476584659027886090/sunboy.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item neo">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/476333743918022686/unknown.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/475813058325905419/expression_sheet_shaded.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/475781348724965386/ref.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item erratus">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/474365215723487242/a.gif" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item alex">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/471790914671607818/a.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item neo">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/468868912277225472/king_of_the_world.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/463137348281040897/barista_boy.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase">
-          <img src="https://cdn.discordapp.com/attachments/454019060250837002/460057548897386506/aaa.gif" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase neo">
-          <img src="https://cdn.discordapp.com/attachments/471098762060759040/473271391253430322/AHH_HES_MELTY.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item erratus">
-          <img src="https://cdn.discordapp.com/attachments/471069123296886784/472172968852717569/unknown.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase neo">
-          <img src="https://cdn.discordapp.com/attachments/448973899300995073/468124160330301440/bastartds.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase">
-          <img src="https://cdn.discordapp.com/attachments/448973899300995073/453906728623407106/h.gif" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item chase neo blaine">
-          <img src="https://cdn.discordapp.com/attachments/448973899300995073/451867303630471178/unknown.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item blaine">
-          <img src="https://cdn.discordapp.com/attachments/448973899300995073/451513385188720650/im_so_proud_of_him.png" alt="" />
-        </div>
-        <div class="column column-block filter-simple-item blaine">
-          <img src="https://cdn.discordapp.com/attachments/448973899300995073/451447805089677312/baby.png" alt="" />
-          <div class="column column-block filter-simple-item ina">
-            <img src="https://cdn.discordapp.com/attachments/448973899300995073/450392318319656973/20180527_161643.jpg" alt="" />
-        </div>
-      </div>
-    </section>
-    <!-- Picture End -->
+<!-- Menu Begin -->
+<nav class="hover-underline-menu" data-menu-underline-from-center>
+  <ul class="menu align-center">
+    <li><a href="../char_info/index.html">About the Squips</a></li>
+    <li><a href="../pictures/index.html">Art</a></li>
+    <li><a href="../crea_info/index.html">About the Creators</a></li>
+  </ul>
+</nav>
+<!-- Menu End -->
 
 <p></p>
 
@@ -182,5 +83,6 @@
     <script src="../js/info.js"></script>
     <script src="../js/stat_1.js"></script>
     <script src="../js/content_2.js"></script>
+    <script src="../js/menu.js"></script>
   </body>
 </html>
