--- a/Website/pictures/index.html
+++ b/Website/pictures/index.html
@@ -123,7 +123,7 @@
 
     <!-- Footer Begin -->
     <div class="mobile-bottom-bar">
-      <a href="#" class="footer-link">
+      <a href="../main/index.html" class="footer-link">
         <i class="fa fa-cog"></i> <span class='footer-text'>Home</span>
       </a>
       <a href="../index.html" class="footer-link">
